# labeling-data-extraction-with-references

./: .gitignore  README.md  app.py  fasthtml-docs.txt  pyproject.toml
data/job_postings/inputs/: posting2.txt
data/job_postings/predictions/: posting1.json
extracted_labels/: posting1.json  posting2.json
notebooks/: tmp.ipynb
postings/: posting1.txt
src/fasthtml_instructor_labeling/: __init__.py  __main__.py
static/: script.js  styles.css
