[project]
name = "fasthtml-instructor-labeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-fasthtml>=0.5.1",
    "pydantic>=2.9.0",
    "instructor>=1.4.1",
    "notebook>=7.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# run `postmodern` will run the `postmodern.main` function
"postmodern" = "fasthtml_instructor_labeling:main"